name:                arith
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tapl-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Arith.Evaluator
                    , Arith.Parser
  other-modules:      Arith.Syntax
  build-depends:      base >= 4.7 && < 5
                    , parsec
  default-language:   Haskell2010

executable arith
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arith
                     , parsec
  default-language:    Haskell2010

test-suite arith-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arith
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tapl-hs
