name:                simpletypes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tapl-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    SimpleTypes.Evaluator
                    , SimpleTypes.Parser
                    , SimpleTypes.Syntax
                    , SimpleTypes.Types
                    , SimpleTypes.TypeChecker
  build-depends:       base >= 4.7 && < 5
                      ,parsec
  default-language:    Haskell2010

executable simpletypes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simpletypes
                     , parsec
  default-language:    Haskell2010

test-suite simpletypes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules :      SimpleTypes.Tests
                     , SimpleTypes.Parser.Tests
  main-is:             Spec.hs
  build-depends:       base
                     , simpletypes
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tapl-hs
